  Changes:
    -
  Bugfixes:
    - Fixed that you could enable/disable the matrix solver while a subfactory is in archive
    - Fixed that the indicated timescale-view button would not update correctly when switching between subfactories

---------------------------------------------------------------------------------------------------
Version: 1.1.11
Date: 19. 12. 2020
  Bugfixes:
    - Fixed machine count totals on lines with subfloors with the matrix solver
    - Fixed an issue with the matrix solver determining the number of rows and columns in its matrix

---------------------------------------------------------------------------------------------------
Version: 1.1.10
Date: 17. 12. 2020
  Changes:
    - The matrix solver now tells you which recipes it has detected as linearly dependant, letting you know the ones that cause it to not be able to solve
  Bugfixes:
    - Fixed an issue with the matrix solver that would lead to an infinite loop. Whew, there's a first time for everything!
    - Fixed that alt-adding a subfactory would crash if you had no other subfactories
    - Fixed that you couldn't view subfloors for subfactories that are in the archive
    - Fixed a crash when changing the window size while a modal dialog is open

---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 15. 12. 2020
  Features:
    - Alt-clicking the 'add subfactory'-button now takes you directly to the product picker
    - Middle-clicking the grab handle on any dialog now re-centers it
  Changes:
    - The matrix solver now allows you to select products are free items as well, which comes in handy when you subfactory has very few recipes
    - Added a message when deactivating the matrix solver informing you that byproduct recipes have been deleted
  Bugfixes:
    - Fixed that the matrix solver dialog would not pop up sometimes after adding a recipe
